add capacity, beeformed routes and implement get from and forms
